# simulamet

./: .travis.yml  CMakeLists.txt  ChangeLog  Name-AR.text  Name.text  Settings.input  Subtitle.text  make-ppa  packaging.conf
ci/: build  monitor  test
debian/: changelog  control  copyright  not-installed  rules  simulamet-desktop.install  simulamet-desktop.lintian-overrides  simulamet-desktop.postinst  simulamet-desktop.postrm  simulamet-development.install  simulamet-development.postinst  simulamet-development.postrm  simulamet-management.install  simulamet-management.postinst  simulamet-management.postrm  watch
debian/upstream/: metadata
gimp-scripts/: Make-Background  Make-Logo  Make-Painting  Test-Gimp
grub/: 34_simulamet_desktop_theme  grub-defaults
rpm/: simulamet.spec
src/: CMakeLists.txt
src/background/: Affiliation.text  CMakeLists.txt  Name-AR.text  Name-CN.text  Name.text  Settings.input  Subtitle.text  Title.text  URL.text  build-caption  build-overlay  test-overlay
src/background/gimp-scripts/: Make-Background  Make-Caption  Make-Cloth  Make-Mosaic  Make-OldPhoto  Make-Painting  Make-Text  Resize-with-Cropping  Test-Gimp
src/grub/: 02_simulamet_management_theme  18_simulamet_development_theme  34_simulamet_desktop_theme  CMakeLists.txt
src/system-info.d/: 20-simulamet
src/system-maintenance.d/: 20-simulamet
